--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -161,7 +161,7 @@
 	<template id="success">
 		<div class="order-success">
 			<h2 class="order-success__title">Заказ оформлен</h2>
-			<p class="order-success__description">Списано 0 синапсов</p>
+			<p class="order-success__description">Списано <span class="order-success__description-total-amount">0</span> синапсов</p>
 			<button class="button order-success__close">За новыми покупками!</button>
 		</div>
 	</template>
